--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy-lambda:
     runs-on: ubuntu-latest
-    timout-minutes: 10
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
       - name: Set AWS Creds
