buggy deploy fix(?)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,4 @@ jobs:
       - name: Deploy
         run:
           zip -j deploy.zip ./
-          aws lambda update-function-code --function-name=generators --zip-file=fileb://deploy.zip
-    
+          aws lambda update-function-code --function-name generators --zip-file=fileb://deploy.zip
