--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
       - name: Deploy
-        run:
+        run: |
           zip -j deploy.zip ./*
           aws lambda update-function-code --function-name=generators --zip-file=fileb://deploy.zip
