--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,6 @@ jobs:
           aws-region: us-west-2
       - name: Deploy
         run: |
-          zip -r deploy.zip ./generators/*
-          aws lambda update-function-code --function-name=generators --zip-file=fileb://deploy.zip
+          cd generators
+          zip -r generators.zip ./*
+          aws lambda update-function-code --function-name=generators --zip-file=fileb://generators.zip
